--- a/src/ui/css/index.css
+++ b/src/ui/css/index.css
@@ -83,102 +83,58 @@ body {
 /**
  * Theme button properties
  **/
-
 .themes {
-  display: flex;
-  width: 100%;
-  margin-bottom: 30px;
-  position: relative;
-}
-
-.theme-checkbox {
-  display: none;
-}
-
-.theme-checkbox:checked ~ .theme-values{
-  display: flex;
-}
-
-.theme-value {
-  flex: 1;
-  order: 2;
-  -moz-appearance: none;
-  -moz-user-select: none;
-  cursor: default;
-  color: var(--textThird-color);
-}
-
-.theme-checkbox:checked + .theme-value{
-  color: var(--highlighted-color);
-  border-color: var(--highlighted-color);
-}
-
-.theme-values {
-  display: none;
-  border: 1px solid var(--border-color);
-  border-radius: 2px;
-  flex-direction: column;
-  position: absolute;
-  width: 100%;
-  bottom: 40px;
-  box-sizing: border-box;
-}
-
-.theme-values > span {
-  padding: 8px 6px 6px 6px;
-  cursor: default;
-  color: var(--textThird-color);
-}
-
-.theme-values > span:hover {
-  background: #00AAA0;
-}
-
-.theme-circles {
-  width: 100%;
   height: 100px;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  background-color: transparent;
 }
 
-.theme-wrapper {
-  display: grid;
-  width: 100%;
-  grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 10px;
-  justify-items: center;
-  grid-row-gap: 3px;
+.themes input[type="radio"] {
+  display: none;
 }
 
-.theme-wrapper > div.theme-element {
+.themes .theme-btn {
   height: 15px;
   width: 15px;
   border-radius: 50%;
+  background-color: green;
+  display: inline-flex;
+  justify-content: center;
+  transition: opacity 0.3s, box-shadow 0.3s;
+  opacity: .4;
   box-shadow: 0 0 3px 0 rgba(0,0,0,1);
-  transition: 0.3s background;
-  background: rgba(0,0,0,0.2);
 }
 
-.theme-wrapper > div.semicircle {
-  transform: rotate(45deg);
+.themes .theme-btn.theme-default {
+  background-color: #E5E5E5;
 }
 
-.theme-wrapper > div.activePoint {
+.themes .theme-btn.theme-white {
+  background-color: #FFFFFF;
+}
+
+.themes .theme-btn.theme-darker {
+  background: linear-gradient(-45deg, #FBFBFB 0%, #FBFBFB 50%, #252A32 50%, #252A32 100%)
+}
+
+.themes .theme-btn.theme-dark {
+  background-color: #252A32;
+}
+
+.themes .theme-btn:hover {
+  box-shadow: 0 0 8px 0 var(--highlighted-color);
+}
+
+.themes:hover .theme-btn{
+  opacity: 1;
+}
+
+.themes input[type="radio"]:checked + .theme-btn::after {
+  content: "";
   height: 5px;
   width: 5px;
   border-radius: 50%;
-  transition: 0.3s background;
   background: var(--border-color);
-  grid-row: 2;
-  display: none;
-}
-
-.theme-wrapper > div.activePoint.active {
-  display: block;
-}
-
-.theme-wrapper > div:hover {
-  box-shadow: 0 0 8px 0 var(--highlighted-color);
+  transform: translateY(18px);
 }
