--- a/src/ui/css/index.css
+++ b/src/ui/css/index.css
@@ -123,7 +123,7 @@ body {
 }
 
 .themes .theme-btn:hover {
-  box-shadow: 0 0 8px 0 var(--highlighted-color);
+  box-shadow: 0 0 6px 0 rgba(0,0,0,1);
 }
 
 .themes:hover .theme-btn{
