--- a/src/ui/css/modules/command-bar.css
+++ b/src/ui/css/modules/command-bar.css
@@ -281,5 +281,5 @@
 }
 
 .cb-save-button:hover {
-  border-color: var(--highlighted-dark-color, #00726b);
+  box-shadow: 0 0 10px -4px var(--shadow-color);
 }
