--- a/src/ui/css/themes/white.css
+++ b/src/ui/css/themes/white.css
@@ -2,7 +2,7 @@
   --base-color: #FFF !important;
   --baseSecond-color: #FFF !important;
   --sidebar-color: #FFF !important;
-  --base-brighter-color: #FFF !important;
+  --base-brighter-color: #fafafc !important;
   --base-invert-color: #000 !important;
   --text-color: #555555 !important;
   --textSecond-color: #FFF !important;
@@ -12,6 +12,5 @@
   --shadow-color: #ddd !important;
   --shadowSecond-color: #999 !important;
   --highlighted-color: #00AAA0 !important;
-  --highlighted-dark-color: #00726b !important;
   --warning-color: #FF6347 !important;
 }
