--- a/src/ui/css/modules/gesture-popup.css
+++ b/src/ui/css/modules/gesture-popup.css
@@ -1,8 +1,3 @@
-
-/**
- *
- **/
-
  @font-face {
    font-family: "firefox-gesture-arrows";
    src: url("/res/fonts/arrows.woff");
@@ -20,9 +15,11 @@
   flex-direction: column;
   width: 100%;
   max-width: 850px;
-  background: var(--base-color);
+  background: var(--base-color, #FFF);
   box-shadow: 0 0 8px 2px var(--shadowSecond-color, #999);
 }
+
+/* transition classes */
 
 .gesture-popup.gp-show {
   animation: gesturePopupShow 0.3s;
@@ -39,6 +36,8 @@
   50% {transform: translate(-50%, -50%) scale(1.05)}
   to {opacity: 1; transform: translate(-50%, -50%) scale(1);}
 }
+
+/* popup head */
 
 .gp-head {
   display: flex;
@@ -71,12 +70,16 @@
   text-align: left;
 }
 
+/* popup main */
+
 .gp-main {
   display: flex;
   flex-direction: row;
   padding: 20px;
   flex: 1;
 }
+
+/* left form content */
 
 .gp-form {
   width: 250px;
@@ -87,8 +90,6 @@
 
 .gp-field {
   display: block;
-  /* fix to prevent child elements forcing parent to grow */
-  min-width: 0;
 }
 
 .gp-field:hover .gp-field-description {
@@ -99,9 +100,7 @@
   margin-top: 40px;
 }
 
-.gp-field-name {
-
-}
+.gp-field-name {}
 
 .gp-field-description {
   font-size: 14px;
@@ -113,35 +112,25 @@
 .gp-field-input {
   width: 100%;
   padding: 5px;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--border-color, #ddd);
   box-sizing: border-box;
   text-align: center;
   border-radius: 2px;
-  background-color: var(--base-color);
+  background-color: var(--base-color, #FFF);
   text-overflow: ellipsis;
-  color: var(--textThird-color);
+  color: var(--textThird-color, #555555);
 }
 
 .gp-field-input:invalid {
   box-shadow: none;
 }
 
-.gp-field-input.gp-command {
+.gp-command-button {
   position: relative;
-  white-space: nowrap;
-  overflow: hidden;
-  padding-right: 28px;
+  cursor: pointer;
 }
 
-.gp-field-input.gp-command::before {
-  content: "\00a0";
-}
-
-.gp-field-input.gp-command[title]:not([title=""])::before {
-  content: attr(title);
-}
-
-.gp-field-input.gp-command::after {
+.gp-command-button::after {
   content: "c";
   position: absolute;
   top: 50%;
@@ -149,6 +138,15 @@
   font-size: 11px;
   font-family: Icons;
   transform: translateY(-50%);
+}
+
+.gp-command-button:hover::after {
+  color: var(--highlighted-color, #00AAA0);
+}
+
+.gp-field-input.gp-command {
+  cursor: pointer;
+  padding-right: 28px;
 }
 
 .gp-field-input.gp-code {
@@ -165,20 +163,17 @@
   cursor: pointer;
   margin-top: auto;
   padding: 8px 20px 5px 20px;
-  background: var(--highlighted-color);
-  color: var(--textSecond-color);
+  background: var(--highlighted-color, #00AAA0);
+  color: var(--textSecond-color, #FFF);
   border-radius: 2px;
   transition: box-shadow 0.3s;
 }
 
 .gp-save-button:hover {
-  box-shadow: 0 0 10px -4px var(--shadowSecond-color);
+  box-shadow: 0 0 10px -4px var(--shadowSecond-color, #999);
 }
 
-.gp-warning-button {
-  background-color: var(--warning-color);
-  border-color: var(--warning-color);
-}
+/* right area content */
 
 .gp-draw-area {
   position: relative;
